fix: ourteam page fix section 1 and 4 gap

--- a/web/css/ourteam.css
+++ b/web/css/ourteam.css
@@ -249,6 +249,17 @@
         padding: var(--clay-taupe);
         padding: 30px 0 30px 0;
     }
+
+    .ourteam-section1 {
+        display: flex;
+        gap: var(--row-img-paragraph-smaller);
+        background-color: var(--medium-warm-gray);
+    }
+
+    .section4 {
+        display: flex;
+        gap: var(--row-img-paragraph-smaller)
+    }
 }
 
 @media screen and (max-width: 800px) {
